--- a/exam/client/index.html
+++ b/exam/client/index.html
@@ -6,6 +6,12 @@
         <script src="/client/libs/angular-ui-router/release/angular-ui-router.js"></script>
         <script src="/client/js/app.js"></script>
         <script src="/client/js/controllers.js"></script>
+        <style type="text/css">
+			.tg  {border-collapse:collapse;border-spacing:0;}
+			.tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
+			.tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
+			.tg .tg-yw4l{vertical-align:top}
+		</style>
     </head>
     <body>
         <ui-view></ui-view>
